-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.7.0
Each exception generates messages like this:
Exception at 0x751fc52f, code: 0x06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) at <some path>
If there are a lot of exceptions happening, this quickly floods Application Output and makes creator unresponsive. For example, this completely locks up the Creator after few seconds:
int main() { while (1) { try { throw 0; } catch (...) {} } }
While it is somewhat useful message, perhaps it could be disabled through some option.
| For Gerrit Dashboard: QTCREATORBUG-20915 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 236225,3 | Debugger: add option to disable task entries for exceptions | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |