src/plugins/debugger/debuggeractions.cpp
@@ -234,6 +234,18 @@ DebuggerSettings::DebuggerSettings()
 
     item = new SavedAction(this);
     item->setCheckable(true);
+    item->setDefaultValue(true);
+    item->setSettingsKey(cdbSettingsGroup, QLatin1String("FirstChanceExceptionTaskEntry"));
+    insertItem(FirstChanceExceptionTaskEntry, item);
+
+    item = new SavedAction(this);
+    item->setCheckable(true);
+    item->setDefaultValue(true);
+    item->setSettingsKey(cdbSettingsGroup, QLatin1String("SecondChanceExceptionTaskEntry"));
+    insertItem(SecondChanceExceptionTaskEntry, item);
+
+    item = new SavedAction(this);
+    item->setCheckable(true);
     item->setDefaultValue(false);
     item->setSettingsKey(cdbSettingsGroup, QLatin1String("IgnoreFirstChanceAccessViolation"));
     insertItem(IgnoreFirstChanceAccessViolation, item);
